Version 1.2.0
------------------------------------------------------------------------
1 October 2008
+ Fixed some user setting bugs.

23 September 2008
+ Updated: templates/admin.css, templates/history.tpl

9 September 2008
+ Using Eloi's new Comments patch #2052452
+ Removing logError from Comment_User.php
+ Removing postSettings from Comments.php
+ Changed default comment listing
+ Moved user rank retrieval to Comments as function
+ Fixed approval template.
+ Added stylized buttons
+ Updated: javascript/expandCollapse


22 August 2008
+ Added switch for using tinymce editor

Version 1.1.0
------------------------------------------------------------------------
5 June 2008
+ Remote avatar image fixed.
+ testAvatar function finished.
+ User can set comment order preference.

4 June 2008
+ Added support for remove_users.
+ Added missing columns to install.sql
+ Avatar file deleted on user deletion.
+ Avatar deleted if changed.

30 May 2008
+ Added bbcode wysiwyg to comments.

27 May 2008
+ Added counter to reported tab
+ Changed some wording here and there
+ Approving comments doesn't stamp updated
+ Removed some redundant code

26 May 2008
+ Added checkboxes to report form for multiple selection.
+ updated: javascript/admin/head.js, templates/reported.tpl


24 April 2008
+ Finished multiple approve/remove

23 April 2008
+ Comments now allows comment approval. (multiple approval not
  finished)
+ Updated: img/cancel.png, img/noentry.png, img/ok.png
  templates/approval.tpl, templates/settings_form.tpl
  javascript/quick_view/head.js

Version 1.0.1
------------------------------------------------------------------------
1 April 2008
+ Fixed broken report panel.

Version 1.0.0
------------------------------------------------------------------------
26 March 2008
+ added permission update to comments
+ Added error message for wrong admin call

7 March 2008
+ Permission check added to popup.
+ Removed unneeded ajax call
+ jquery called in default to prevent repeat