@@ -18,4 +18,10 @@
     <version>2.5.0</version>
     <url>http://phpwebsite.appstate.edu/downloads/modules/users/</url>
   </module>
+  <module>
+    <title>demographics</title>
+    <properName>Demographics</properName>
+    <version>1.2.0</version>
+    <url>http://phpwebsite.appstate.edu/downloads/modules/demographics/</url>
+  </module>
 </dependency>
